<resources>
    <string name="app_name">ICS</string>

    <!--Login Texts-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="switchCal">Switch</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signIn">Sign In</string>
    <string name="noAcc">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>

    <!--Login Descriptions-->
    <string name="image01_temp">image</string>

    <string name="headerNav">Header Nav</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <!--Create Meeting Texts-->
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="attendees">Attendees</string>
    <string name="placeOfMeeting">Place of Meeting</string>
    <string name="startDate">Start Date</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="repeats">Repeats</string>
    <string name="priority">Priority</string>
    <string name="reminderDateTime">Reminder Date/Time</string>

    <!--Create Meeting Texts-->
    <string name="eventName">Name of Event</string>
    <string name="placeOfEvent">Place of Event</string>

    <!--Create Task Texts-->
    <string name="category">Category</string>
    <string name="invite">Invite Person/People</string>
    <string name="location">Location</string>

    <!--Navigation Menu Texts-->
    <string name="calendarView">Calendar View</string>
    <string name="createAgenda">Create Agenda</string>
    <string name="viewAgendas">View Agendas</string>
    <string name="sync">Sync</string>
    <string name="manageContacts">Manage Contacts</string>
    <string name="manageLocations">Manage Locations</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


</resources>
