<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_calView"
        android:icon="@mipmap/ic_perm_contact_calendar_black_24dp"
        android:title="@string/calendarView" />

    <item
        android:id="@+id/nav_createAgenda"
        android:icon="@mipmap/ic_create_black_24dp"
        android:title="@string/createAgenda" />

    <item
        android:id="@+id/nav_viewAgendas"
        android:icon="@mipmap/ic_view_agenda_black_24dp"
        android:title="@string/viewAgendas" />

    <item
        android:id="@+id/nav_sync"
        android:icon="@mipmap/ic_sync_black_24dp"
        android:title="@string/sync" />

    <item
        android:id="@+id/nav_manContacts"
        android:icon="@mipmap/ic_contacts_black_24dp"
        android:title="@string/manageContacts" />

    <item
        android:id="@+id/nav_manLocation"
        android:icon="@mipmap/ic_contacts_black_24dp"
        android:title="@string/manageLocations" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/logout" />

</menu>