<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FFCF"
    android:orientation="vertical">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/meeting_details_btn"
            android:text="@string/cancel"
            android:textColor="#000" />

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/meeting_details_btn"
            android:text="@string/next"
            android:textColor="#000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <AutoCompleteTextView
            android:id="@+id/inputName"
            android:labelFor="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/title"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputSubject"
            android:labelFor="@+id/inputSubject"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/subject"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputCategory"
            android:labelFor="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/category"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputDescription"
            android:labelFor="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/description"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputInvite"
            android:labelFor="@+id/inputInvite"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/invite"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputPlace"
            android:labelFor="@+id/inputPlace"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/location"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputStartDate"
            android:labelFor="@+id/inputStartDate"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/startDate"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputStartTime"
            android:labelFor="@+id/inputStartTime"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/startTime"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputEndDate"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:labelFor="@+id/inputEndDate"
            android:text="@string/endDate"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputEndTime"
            android:labelFor="@+id/inputEndTime"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/endTime"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputRepeats"
            android:labelFor="@+id/inputRepeats"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/repeats"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputPriority"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:labelFor="@+id/inputPriority"
            android:text="@string/priority"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

        <AutoCompleteTextView
            android:id="@+id/inputReminder"
            android:labelFor="@+id/inputReminder"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/reminderDateTime"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp" />

    </LinearLayout>

</LinearLayout>

