<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E2F7A8"
    android:orientation="vertical">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/meeting_details_btn"
            android:text="@string/cancel"
            android:textColor="#000" />

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/meeting_details_btn"
            android:text="@string/next"
            android:textColor="#000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <AutoCompleteTextView
            android:id="@+id/inputName"
            android:labelFor="@+id/inputName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/title" />

        <AutoCompleteTextView
            android:id="@+id/inputSubject"
            android:labelFor="@+id/inputSubject"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/subject" />

        <AutoCompleteTextView
            android:id="@+id/inputDescription"
            android:labelFor="@+id/inputDescription"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/description" />

        <AutoCompleteTextView
            android:id="@+id/inputAttendees"
            android:labelFor="@+id/inputAttendees"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/attendees" />

        <AutoCompleteTextView
            android:id="@+id/inputPlace"
            android:labelFor="@+id/inputPlace"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/placeOfMeeting" />

        <AutoCompleteTextView
            android:id="@+id/inputStartDate"
            android:labelFor="@+id/inputStartDate"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/startDate" />

        <AutoCompleteTextView
            android:id="@+id/inputStartTime"
            android:labelFor="@+id/inputStartTime"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/startTime" />

        <AutoCompleteTextView
            android:id="@+id/inputEndDate"
            android:labelFor="@+id/inputEndDate"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/endDate" />

        <AutoCompleteTextView
            android:id="@+id/inputEndTime"
            android:labelFor="@+id/inputEndTime"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/endTime" />

        <AutoCompleteTextView
            android:id="@+id/inputRepeats"
            android:labelFor="@+id/inputRepeats"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/repeats" />

        <AutoCompleteTextView
            android:id="@+id/inputPriority"
            android:labelFor="@+id/inputPriority"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/priority" />

        <AutoCompleteTextView
            android:id="@+id/inputReminder"
            android:labelFor="@+id/inputReminder"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="41dp"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:text="@string/reminderDateTime" />

    </LinearLayout>

</LinearLayout>

